--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
       <artifactId>assertj-core</artifactId>
       <version>3.27.3</version>
       <scope>test</scope>
+
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
     <dependency>
@@ -42,6 +43,18 @@
       <scope>test</scope>
 
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-java-commons -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-java-commons</artifactId>
+      <version>2.29.1</version>
+    </dependency>
+      <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.13.1</version>
+      </dependency>
 
   </dependencies>
 </project>
